// Vitest Snapshot v1

exports[`plugins/babel > should add core-js-entry when output.polyfill is entry 1`] = `
{
  "main": [
    "/datatext/javascript,import \\"core-js\\";",
    "index.js",
  ],
}
`;

exports[`plugins/babel > should add rule to compile Data URI when enable source.compileJsDataURI 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/builder-webpack-provider",
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.25",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.25",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/babel > should adjust browserslist when target is node 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/builder-webpack-provider",
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "lib",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": undefined,
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "node >= 12",
                    ],
                    "useBuiltIns": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "lib",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": undefined,
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "node >= 12",
                    ],
                    "useBuiltIns": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/babel > should not add core-js-entry when output.polyfill is usage 1`] = `
{
  "main": [
    "index.js",
  ],
}
`;

exports[`plugins/babel > should override targets of babel-preset-env when using output.overrideBrowserslist config 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/builder-webpack-provider",
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.25",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "Chrome 80",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.25",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "Chrome 80",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/babel > should set babel-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/builder-webpack-provider",
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.25",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.25",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/babel > should set include/exclude 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          "src/**/*.js",
        ],
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/builder-webpack-provider",
              {
                "not": /node_modules/,
              },
            ],
          },
          "src/**/*.ts",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.25",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/builder/builder-webpack-provider/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.25",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;
